[gd_scene load_steps=2 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]

[node name="TitleScreen" type="Control"]
margin_right = 300.0
margin_bottom = 400.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 300.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 3.0
margin_top = 67.0
margin_right = 297.0
margin_bottom = 333.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 294.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
text = "Volume (0 - 120)"
align = 1
valign = 1

[node name="volume" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 294.0
margin_bottom = 50.0
rect_min_size = Vector2( 140, 50 )
text = "50"
align = 1

[node name="display" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 294.0
margin_bottom = 104.0
rect_min_size = Vector2( 200, 50 )
text = "00 : 00"
align = 1
valign = 1

[node name="time_1" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 294.0
margin_bottom = 158.0
rect_min_size = Vector2( 200, 50 )
text = "60"
align = 1
placeholder_alpha = 1.0

[node name="time_2" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 294.0
margin_bottom = 212.0
rect_min_size = Vector2( 200, 50 )
text = "8"
align = 1
placeholder_alpha = 1.0

[node name="start_button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 294.0
margin_bottom = 266.0
rect_min_size = Vector2( 200, 50 )
text = "start"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="button_up" from="CenterContainer/VBoxContainer/start_button" to="." method="_on_start_button_button_up"]
